# fauna

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/fauna-cli/: Cargo.toml
crates/fauna-cli/src/: main.rs  p2p.rs
crates/fauna-core/: Cargo.toml
crates/fauna-core/src/: crypto.rs  identity.rs  invite.rs  key_exchange.rs  lib.rs
crates/fauna-desktop/: Cargo.toml
crates/fauna-desktop/src/: main.rs  tor.rs
scripts/: package-windows.ps1
