[workspace]
resolver = "2"
members = [
  "crates/fauna-core",
  "crates/fauna-cli",
  "crates/fauna-desktop",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Fauna contributors"]

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
hex = "0.4"
hmac = "0.12"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
